--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
 Miranda Evans miranda.r.evans@gmail.com
 Kevin Yook kevin.yook@holbertonschool.com
+Leo Byeon leo.byeon@holbertonschool.com
+Hemant Heer hemant.heer@holbertonschool.com
